--- a/Java Creating Web Applications Using Spring MVC/webappmvc/pom.xml
+++ b/Java Creating Web Applications Using Spring MVC/webappmvc/pom.xml
@@ -5,12 +5,13 @@
 	<artifactId>webappmvc</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>webappmvc Maven Webapp</name>
+	<name>webappmvc</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -32,15 +33,15 @@
 		</dependency>
 	</dependencies>
 	<build>
+	<plugins>
+    <plugin>
+      <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+    </plugin>
+  </plugins>
 		<finalName>webappmvc</finalName>
 	</build>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>3.8.1</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 </project>
