--- a/Java Creating Web Applications Using Spring MVC/webappmvc/src/main/webapp/WEB-INF/web.xml
+++ b/Java Creating Web Applications Using Spring MVC/webappmvc/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
   
   <servlet>
   	<servlet-name>MyDemoApp</servlet-name>
-  	<servlet-class>org.spring.framework.web.servlet.DispatcherServlet</servlet-class>
+  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   	<init-param>
   		<param-name>contextConfigLocation</param-name>
   		<param-value>/WEB-INF/config/myDemo-servletConfig.xml</param-value>
